Closed Bug 25223 Opened 25 years ago Closed 25 years ago

Images rendered in the wrong location

Categories

(Core :: Layout, defect, P3)

x86
Windows NT
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: mwitbrock, Assigned: troy)

References

()

Details

Go to beta.hotbot.com
enter java in the search box,
click search button (whose background, by the way, seems to be incorrectly
rendered).

On my copy of mozilla M13, the three ad images which are supposed to appear on
the right of the frame (and whose borders show up over there) are rendered on
the left of the page overlapping other content.
I just checked, and the bug appears on the live service site, http://hotbot.com
too.
Status: NEW → ASSIGNED
Improved the way the block code handles floaters. Now we try and determine where 
the floater will go before reflowing it. This way we don't have to move it a 
second time
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
With the Feb 21 build, the images are appearing on the right side of page.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.