b=25223. Block code now does a better job of determing where the floater should go before reflowing it